[workspace]

members = [
    "crates/common",
    "crates/direct_access",
    "crates/handling_manifest",
    "crates/cpp_qt_file_generation",
    "crates/rust_file_generation",
    "crates/handling_app_lifecycle",
    "crates/slint_ui",
    "crates/macros",
]
default-members = [
    "crates/slint_ui",
]

resolver = "3"

[workspace.package]
homepage = "https://github.com/jacquetc/qleany"
repository = "https://github.com/jacquetc/qleany"
license = "MPL-2.0"
edition = "2024"
version = "0.0.1"
authors = ["Cyril Jacquet <cyril.jacquet@ferntech.eu>"]
documentation = "https://docs.rs/qleany/"
readme = "README.md"
description = """
Architecture generator for Rust and C++/Qt applications.
"""
keywords = ["architecture", "scaffold", "codegen", "rust", "qt"]
categories = ["development-tools", "template-engine", "gui", "command-line-utilities", "data-structures"]

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
flume = "0.12.0"
serde = { version = "1", features = ["derive"] }

[workspace.lints.rust]

