[workspace]

members = [
    "crates/common",
    "crates/direct_access",
    "crates/handling_manifest",
    "crates/cpp_qt_file_generation",
    "crates/rust_file_generation",
    "crates/handling_app_lifecycle",
    "crates/file_generation_shared_steps",
    "crates/slint_ui",
    "crates/macros",
]
default-members = [
    "crates/slint_ui",
]

resolver = "3"

[workspace.package]
homepage = "https://github.com/jacquetc/qleany"
repository = "https://github.com/jacquetc/qleany"
license = "MPL-2.0"
edition = "2024"
version = "1.6.0"
authors = ["Cyril Jacquet <cyril.jacquet@ferntech.eu>"]
documentation = "https://docs.rs/qleany/"
readme = "README.md"
description = """
Architecture generator for Rust and C++/Qt applications.
"""
keywords = ["architecture", "scaffold", "codegen", "rust", "qt"]
categories = ["development-tools", "template-engine", "gui", "command-line-utilities", "data-structures"]

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
flume = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4" , features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]

