[workspace]

members = [
    "crates/common",
    "crates/direct_access",
    "crates/handling_manifest",
    "crates/cpp_qt_file_generation",
    "crates/rust_file_generation",
    "crates/handling_app_lifecycle",
    "crates/file_generation_shared_steps",
    "crates/slint_ui",
    "crates/macros",
]
default-members = [
    "crates/slint_ui",
]

resolver = "3"

[workspace.package]
homepage = "https://github.com/jacquetc/qleany"
repository = "https://github.com/jacquetc/qleany"
license = "MPL-2.0"
edition = "2024"
version = "1.7.3"
authors = ["Cyril Jacquet <cyril.jacquet@ferntech.eu>"]
documentation = "https://docs.rs/qleany/"
readme = "README.md"
description = """
Architecture generator for Rust and C++/Qt applications.
"""
keywords = ["architecture", "scaffold", "codegen", "rust", "qt"]
categories = ["development-tools", "template-engine", "gui", "command-line-utilities", "data-structures"]

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
flume = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4" , features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates
common = { package = "qleany-common", version = "1.7.3", path = "crates/common" }
macros = { package = "qleany-macros", version = "1.7.3", path = "crates/macros" }
direct_access = { package = "qleany-direct-access", version = "1.7.3", path = "crates/direct_access" }
handling_manifest = { package = "qleany-handling-manifest", version = "1.7.3", path = "crates/handling_manifest" }
rust_file_generation = { package = "qleany-rust-file-generation", version = "1.7.3", path = "crates/rust_file_generation" }
cpp_qt_file_generation = { package = "qleany-cpp-qt-file-generation", version = "1.7.3", path = "crates/cpp_qt_file_generation" }
handling_app_lifecycle = { package = "qleany-handling-app-lifecycle", version = "1.7.3", path = "crates/handling_app_lifecycle" }
file_generation_shared_steps = { package = "qleany-file-generation-shared-steps", version = "1.7.3", path = "crates/file_generation_shared_steps" }

[workspace.lints.rust]

