[tool.poetry]
name = "qleany"
version = "0.0.0"
license = "MPL"
description = "Python tool for Qleany"
authors = ["Cyril Jacquet <cyril.jacquet@skribisto.eu>"]
repository = "https://github.com/jacquetc/qleany"
readme = ["README.md", "LICENSE"]
packages = [{ include = "qleany" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyside6 = "^6.7.2"
clang-format = "^18.1.8"
stringcase = "^1.2.0"
jinja2 = "^3.1.4"
ruamel-yaml = "^0.18.6"
jsonschema = "^4.23.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
qleany = "qleany.__main__:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""
format-jinja-imports = [{ module = "datetime", item = "datetime" }]

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "qleany" }]

[tool.pyright]
venvPath = "."
venv = ".venv"
