[package]
name = "qleany-cli"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
common = { path = "../common" }
log = "0.4"
env_logger = "0.11"
direct_access = { path = "../direct_access" }
handling_manifest = { path = "../handling_manifest" }
rust_file_generation = { path = "../rust_file_generation" }