[package]
name = "common"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
redb = "3.1.0"
bincode = { version = "1" }
anyhow = { workspace = true }
flume = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
log = "0.4"

[lints]
workspace = true
