[package]
name = "qleany-common"
description = "Shared entities, database, events, and undo/redo infrastructure for Qleany"
authors.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
publish = true

[lib]
name = "common"

[dependencies]
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
redb = "3.1.0"
postcard = { version = "1.1.3", features = ["alloc"] }
anyhow = { workspace = true }
flume = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
log = "0.4"

[lints]
workspace = true
