[package]
name = "common_direct_access"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "mock"], default-features = false }
direct_access = { path = "../direct_access"}
common_entities = { path = "../common_entities"}
common_persistence = { path = "../common_persistence"}

[lints]
workspace = true
