[package]
name = "common_persistence"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.32.1"
tempfile = "3.2.0"
anyhow = "1.0"
direct_access = { path = "../direct_access" }
common_entities = { path = "../common_entities" }

[lints]
workspace = true
