[package]
name = "cpp_qt_file_generation"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = { workspace = true }
common = { path = "../common" }
macros = { path = "../macros" }
heck = "0.5"
chrono = { workspace = true }
include_dir = "0.7"
tera = "1.18"
indexmap = { version = "2", features = ["serde"] }
which = "8.0.0"
log = "0.4"
rayon = "1.10"

[lints]
workspace = true
