[package]
name = "qleany-cpp-qt-file-generation"
description = "C++/Qt code generation from Tera templates for Qleany"
authors.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
publish = true

[lib]
name = "cpp_qt_file_generation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
common = { workspace = true }
macros = { workspace = true }
heck = "0.5"
chrono = { workspace = true }
include_dir = "0.7"
tera = "1.18"
indexmap = { version = "2", features = ["serde"] }
which = "8.0.0"
log = "0.4"
rayon = "1.10"

[lints]
workspace = true
