[package]
name = "direct_access"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror =  { workspace = true }
common = { path = "../common"}
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"], workspace = true } 


[lints]
workspace = true

