[package]
name = "direct_access"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
common = { path = "../common" }
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"], workspace = true }
macros = { path = "../macros" }

[lints]
workspace = true

