[package]
name = "direct_access"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
common = { path = "../common" }
anyhow = { workspace = true }
serde = { features = ["derive"], workspace = true }
macros = { path = "../macros" }

[lints]
workspace = true

