[package]
name = "qleany-file-generation-shared-steps"
description = "Shared file generation utilities for Qleany"
authors.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
publish = true

[lib]
name = "file_generation_shared_steps"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
similar = "2"

[lints]
workspace = true
