[package]
name = "qleany-handling-app-lifecycle"
description = "Application initialization and cleanup for Qleany"
authors.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
publish = true

[lib]
name = "handling_app_lifecycle"

[dependencies]
serde = "1.0"
anyhow = { workspace = true }
common = { workspace = true }
macros = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
