[package]
name = "handling_manifest"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = "1.0"
serde_yml = "0.0.12"
serde_json = "1.0"
jsonschema = "0.39.0"
anyhow = { workspace = true }
common = { path = "../common" }
macros = { path = "../macros" }

[lints]
workspace = true
