[package]
name = "handling_manifest"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_yml = "0.0.12"
serde_json =  { workspace = true }
jsonschema = "0.45.0"
heck = "0.5"
tera = "1.18"
anyhow = { workspace = true }
common = { path = "../common" }
macros = { path = "../macros" }
chrono = { workspace = true }

[lints]
workspace = true
