[package]
name = "qleany-handling-manifest"
description = "YAML manifest loading, saving, and validation for Qleany"
authors.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
publish = true

[lib]
name = "handling_manifest"

[dependencies]
serde = { workspace = true }
serde_yml = "0.0.12"
serde_json = { workspace = true }
jsonschema = "0.45.0"
heck = "0.5"
tera = "1.18"
anyhow = { workspace = true }
common = { workspace = true }
macros = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
