[package]
name = "qleany-macros"
description = "Procedural macros for Unit of Work code generation in Qleany"
authors.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
readme = "../../README.md"
publish = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
heck = "0.5"

[lints]
workspace = true
