[package]
name = "rust_file_generation"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = { workspace = true }
common = { path = "../common" }
macros = { path = "../macros" }

[lints]
workspace = true
