[package]
name = "rust_file_generation"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = { workspace = true }
common = { path = "../common" }
macros = { path = "../macros" }
heck = "0.5"
chrono = "0.4"
include_dir = "0.7"
tera = "1.18"
indexmap = { version = "2", features = ["serde"] }
which = "8.0.0"
time = "0.3.43"
log = "0.4"


[lints]
workspace = true