[package]
name = "qleany"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
slint = { version = "1.15" }
log = "0.4"
env_logger = "0.11"
rfd = "0.17.2"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = {workspace = true}
flume = { workspace = true }
serde_json = "1.0.149"
serde_yml = "0.0.12"
ctrlc = "3.5.0"
heck = "0.5"
arboard = "3.6"
open = "5.3"
include_dir = "0.7"
termimad = "0.34.1"
chrono = { workspace = true }

# Backend crates
common = { path = "../common" }
direct_access = { path = "../direct_access" }
handling_manifest = { path = "../handling_manifest" }
rust_file_generation = { path = "../rust_file_generation" }
cpp_qt_file_generation = { path = "../cpp_qt_file_generation" }
handling_app_lifecycle = { path = "../handling_app_lifecycle" }
file_generation_shared_steps = { path = "../file_generation_shared_steps" }

[build-dependencies]
slint-build = "1.15"

[lints]
workspace =true
