[package]
name = "qleany"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
readme = "README.md"
description.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
slint = { version = "1.15" }
log = "0.4"
env_logger = "0.11"
rfd = "0.17.2"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = {workspace = true}
flume = { workspace = true }
serde_json = "1.0.149"
serde_yml = "0.0.12"
ctrlc = "3.5.0"
heck = "0.5"
arboard = "3.6"
open = "5.3"
include_dir = "0.7"
termimad = "0.34.1"
chrono = { workspace = true }

# Backend crates
common = { workspace = true }
direct_access = { workspace = true }
handling_manifest = { workspace = true }
rust_file_generation = { workspace = true }
cpp_qt_file_generation = { workspace = true }
handling_app_lifecycle = { workspace = true }
file_generation_shared_steps = { workspace = true }

[build-dependencies]
slint-build = "1.15"

[lints]
workspace =true
